// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test paths add path 1`] = `
<Provider
  store={
    Object {
      "actions": Array [
        Object {
          "createdAt": 1499601066647,
          "methods": Array [],
          "path": "/",
          "type": "ADD_PATH",
        },
      ],
      "dispatch": [Function],
      "getState": [Function],
      "logicMiddleware": [Function],
      "replaceReducer": [Function],
      "resetActions": [Function],
      "subscribe": [Function],
      "whenComplete": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Connect(Paths)>
    <Paths
      addPath={[Function]}
      paths={
        Array [
          Object {
            "createdAt": 1498875254374,
            "methods": Array [
              Object {
                "apiGroup": "Light",
                "batch": false,
                "description": "Get Server Info",
                "examples": Array [],
                "method": "get",
                "parameters": Object {},
                "permissions": Array [],
                "request": Object {},
                "response": Object {},
                "since": "1.0.2",
                "status": "normal",
                "tags": Array [
                  "API Versions",
                ],
                "visibility": "public",
              },
            ],
            "path": "/restapi",
          },
          Object {
            "createdAt": 1499601066647,
            "methods": Array [],
            "path": "/",
          },
        ]
      }
    >
      <div>
        <h2>
          Paths
        </h2>
        <Collapse
          accordion={true}
          bordered={true}
          openAnimation={
            Object {
              "appear": [Function],
              "enter": [Function],
              "leave": [Function],
            }
          }
          prefixCls="ant-collapse"
        >
          <Collapse
            accordion={true}
            bordered={true}
            className=""
            destroyInactivePanel={false}
            onChange={[Function]}
            openAnimation={
              Object {
                "appear": [Function],
                "enter": [Function],
                "leave": [Function],
              }
            }
            prefixCls="ant-collapse"
          >
            <div
              className="ant-collapse"
            >
              <CollapsePanel
                destroyInactivePanel={false}
                header="/"
                headerClass=""
                isActive={false}
                onItemClick={[Function]}
                openAnimation={
                  Object {
                    "appear": [Function],
                    "enter": [Function],
                    "leave": [Function],
                  }
                }
                prefixCls="ant-collapse"
                showArrow={true}
              >
                <div
                  className="ant-collapse-item"
                >
                  <div
                    aria-expanded={false}
                    className="ant-collapse-header"
                    onClick={[Function]}
                    role="tab"
                  >
                    <i
                      className="arrow"
                    />
                    /
                  </div>
                  <Animate
                    animation={
                      Object {
                        "appear": [Function],
                        "enter": [Function],
                        "leave": [Function],
                      }
                    }
                    component=""
                    componentProps={Object {}}
                    exclusive={true}
                    onAppear={[Function]}
                    onEnd={[Function]}
                    onEnter={[Function]}
                    onLeave={[Function]}
                    showProp="isActive"
                    transitionAppear={false}
                    transitionEnter={true}
                    transitionLeave={true}
                  >
                    <AnimateChild
                      animation={
                        Object {
                          "appear": [Function],
                          "enter": [Function],
                          "leave": [Function],
                        }
                      }
                      transitionAppear={false}
                      transitionEnter={true}
                      transitionLeave={true}
                    >
                      <PanelContent
                        destroyInactivePanel={false}
                        isActive={false}
                        prefixCls="ant-collapse"
                      />
                    </AnimateChild>
                  </Animate>
                </div>
              </CollapsePanel>
              <CollapsePanel
                destroyInactivePanel={false}
                header="/restapi"
                headerClass=""
                isActive={false}
                onItemClick={[Function]}
                openAnimation={
                  Object {
                    "appear": [Function],
                    "enter": [Function],
                    "leave": [Function],
                  }
                }
                prefixCls="ant-collapse"
                showArrow={true}
              >
                <div
                  className="ant-collapse-item"
                >
                  <div
                    aria-expanded={false}
                    className="ant-collapse-header"
                    onClick={[Function]}
                    role="tab"
                  >
                    <i
                      className="arrow"
                    />
                    /restapi
                  </div>
                  <Animate
                    animation={
                      Object {
                        "appear": [Function],
                        "enter": [Function],
                        "leave": [Function],
                      }
                    }
                    component=""
                    componentProps={Object {}}
                    exclusive={true}
                    onAppear={[Function]}
                    onEnd={[Function]}
                    onEnter={[Function]}
                    onLeave={[Function]}
                    showProp="isActive"
                    transitionAppear={false}
                    transitionEnter={true}
                    transitionLeave={true}
                  >
                    <AnimateChild
                      animation={
                        Object {
                          "appear": [Function],
                          "enter": [Function],
                          "leave": [Function],
                        }
                      }
                      transitionAppear={false}
                      transitionEnter={true}
                      transitionLeave={true}
                    >
                      <PanelContent
                        destroyInactivePanel={false}
                        isActive={false}
                        prefixCls="ant-collapse"
                      />
                    </AnimateChild>
                  </Animate>
                </div>
              </CollapsePanel>
            </div>
          </Collapse>
        </Collapse>
        <Button
          clicked={false}
          ghost={false}
          loading={false}
          onClick={[Function]}
          prefixCls="ant-btn"
          size="large"
          type="primary"
        >
          <button
            className="ant-btn ant-btn-primary ant-btn-lg ant-btn-clicked"
            onClick={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <Icon
              type="plus"
            >
              <i
                className="anticon anticon-plus"
              />
            </Icon>
            <span>
              Add path
            </span>
          </button>
        </Button>
      </div>
    </Paths>
  </Connect(Paths)>
</Provider>
`;

exports[`test paths delete path 1`] = `
<Provider
  store={
    Object {
      "actions": Array [
        Object {
          "index": 0,
          "type": "DELETE_PATH",
        },
      ],
      "dispatch": [Function],
      "getState": [Function],
      "logicMiddleware": [Function],
      "replaceReducer": [Function],
      "resetActions": [Function],
      "subscribe": [Function],
      "whenComplete": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Connect(Paths)>
    <Paths
      addPath={[Function]}
      paths={Array []}
    >
      <div>
        <h2>
          Paths
        </h2>
        <Collapse
          accordion={true}
          bordered={true}
          openAnimation={
            Object {
              "appear": [Function],
              "enter": [Function],
              "leave": [Function],
            }
          }
          prefixCls="ant-collapse"
        >
          <Collapse
            accordion={true}
            bordered={true}
            className=""
            destroyInactivePanel={false}
            onChange={[Function]}
            openAnimation={
              Object {
                "appear": [Function],
                "enter": [Function],
                "leave": [Function],
              }
            }
            prefixCls="ant-collapse"
          >
            <div
              className="ant-collapse"
            />
          </Collapse>
        </Collapse>
        <Button
          clicked={false}
          ghost={false}
          loading={false}
          onClick={[Function]}
          prefixCls="ant-btn"
          size="large"
          type="primary"
        >
          <button
            className="ant-btn ant-btn-primary ant-btn-lg"
            onClick={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <Icon
              type="plus"
            >
              <i
                className="anticon anticon-plus"
              />
            </Icon>
            <span>
              Add path
            </span>
          </button>
        </Button>
      </div>
    </Paths>
  </Connect(Paths)>
</Provider>
`;

exports[`test paths edit path path 1`] = `
<Provider
  store={
    Object {
      "actions": Array [
        Object {
          "path": Array [
            "paths",
            0,
            "path",
          ],
          "type": "SET_PROP",
          "value": "/hello",
        },
        Object {
          "path": Array [
            "paths",
            0,
            "path",
          ],
          "type": "SET_PROP",
          "value": "/world",
        },
      ],
      "dispatch": [Function],
      "getState": [Function],
      "logicMiddleware": [Function],
      "replaceReducer": [Function],
      "resetActions": [Function],
      "subscribe": [Function],
      "whenComplete": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Connect(Paths)>
    <Paths
      addPath={[Function]}
      paths={
        Array [
          Object {
            "createdAt": 1498875254374,
            "methods": Array [
              Object {
                "apiGroup": "Light",
                "batch": false,
                "description": "Get Server Info",
                "examples": Array [],
                "method": "get",
                "parameters": Object {},
                "permissions": Array [],
                "request": Object {},
                "response": Object {},
                "since": "1.0.2",
                "status": "normal",
                "tags": Array [
                  "API Versions",
                ],
                "visibility": "public",
              },
            ],
            "path": "/world",
          },
        ]
      }
    >
      <div>
        <h2>
          Paths
        </h2>
        <Collapse
          accordion={true}
          bordered={true}
          openAnimation={
            Object {
              "appear": [Function],
              "enter": [Function],
              "leave": [Function],
            }
          }
          prefixCls="ant-collapse"
        >
          <Collapse
            accordion={true}
            bordered={true}
            className=""
            destroyInactivePanel={false}
            onChange={[Function]}
            openAnimation={
              Object {
                "appear": [Function],
                "enter": [Function],
                "leave": [Function],
              }
            }
            prefixCls="ant-collapse"
          >
            <div
              className="ant-collapse"
            >
              <CollapsePanel
                destroyInactivePanel={false}
                header="/world"
                headerClass=""
                isActive={true}
                onItemClick={[Function]}
                openAnimation={
                  Object {
                    "appear": [Function],
                    "enter": [Function],
                    "leave": [Function],
                  }
                }
                prefixCls="ant-collapse"
                showArrow={true}
              >
                <div
                  className="ant-collapse-item ant-collapse-item-active"
                >
                  <div
                    aria-expanded={true}
                    className="ant-collapse-header"
                    onClick={[Function]}
                    role="tab"
                  >
                    <i
                      className="arrow"
                    />
                    /world
                  </div>
                  <Animate
                    animation={
                      Object {
                        "appear": [Function],
                        "enter": [Function],
                        "leave": [Function],
                      }
                    }
                    component=""
                    componentProps={Object {}}
                    exclusive={true}
                    onAppear={[Function]}
                    onEnd={[Function]}
                    onEnter={[Function]}
                    onLeave={[Function]}
                    showProp="isActive"
                    transitionAppear={false}
                    transitionEnter={true}
                    transitionLeave={true}
                  >
                    <AnimateChild
                      animation={
                        Object {
                          "appear": [Function],
                          "enter": [Function],
                          "leave": [Function],
                        }
                      }
                      transitionAppear={false}
                      transitionEnter={true}
                      transitionLeave={true}
                    >
                      <PanelContent
                        destroyInactivePanel={false}
                        isActive={true}
                        prefixCls="ant-collapse"
                      >
                        <div
                          className="ant-collapse-content ant-collapse-content-active"
                          role="tabpanel"
                        >
                          <div
                            className="ant-collapse-content-box"
                          >
                            <Connect(FormItem)
                              index={0}
                            >
                              <FormItem
                                deletePath={[Function]}
                                index={0}
                                path={
                                  Object {
                                    "createdAt": 1498875254374,
                                    "methods": Array [
                                      Object {
                                        "apiGroup": "Light",
                                        "batch": false,
                                        "description": "Get Server Info",
                                        "examples": Array [],
                                        "method": "get",
                                        "parameters": Object {},
                                        "permissions": Array [],
                                        "request": Object {},
                                        "response": Object {},
                                        "since": "1.0.2",
                                        "status": "normal",
                                        "tags": Array [
                                          "API Versions",
                                        ],
                                        "visibility": "public",
                                      },
                                    ],
                                    "path": "/world",
                                  }
                                }
                                setProp={[Function]}
                              >
                                <div>
                                  <_a
                                    cancelText="No"
                                    okText="Yes"
                                    onConfirm={[Function]}
                                    placement="top"
                                    prefixCls="ant-popover"
                                    title="Are you sure to delete path \\"/world\\"?"
                                    transitionName="zoom-big"
                                    trigger="click"
                                  >
                                    <Tooltip
                                      arrowPointAtCenter={false}
                                      autoAdjustOverflow={true}
                                      mouseEnterDelay={0.1}
                                      mouseLeaveDelay={0.1}
                                      onConfirm={[Function]}
                                      onVisibleChange={[Function]}
                                      overlay={
                                        <div>
                                          <div
                                            className="ant-popover-inner-content"
                                          >
                                            <div
                                              className="ant-popover-message"
                                            >
                                              <Icon
                                                type="exclamation-circle"
                                              />
                                              <div
                                                className="ant-popover-message-title"
                                              >
                                                Are you sure to delete path "/world"?
                                              </div>
                                            </div>
                                            <div
                                              className="ant-popover-buttons"
                                            >
                                              <Button
                                                clicked={false}
                                                ghost={false}
                                                loading={false}
                                                onClick={[Function]}
                                                prefixCls="ant-btn"
                                                size="small"
                                              >
                                                No
                                              </Button>
                                              <Button
                                                clicked={false}
                                                ghost={false}
                                                loading={false}
                                                onClick={[Function]}
                                                prefixCls="ant-btn"
                                                size="small"
                                                type="primary"
                                              >
                                                Yes
                                              </Button>
                                            </div>
                                          </div>
                                        </div>
                                      }
                                      placement="top"
                                      prefixCls="ant-popover"
                                      transitionName="zoom-big"
                                      trigger="click"
                                    >
                                      <Tooltip
                                        align={Object {}}
                                        arrowContent={null}
                                        arrowPointAtCenter={false}
                                        autoAdjustOverflow={true}
                                        builtinPlacements={
                                          Object {
                                            "bottom": Object {
                                              "offset": Array [
                                                0,
                                                4,
                                              ],
                                              "overflow": Object {
                                                "adjustX": 1,
                                                "adjustY": 1,
                                              },
                                              "points": Array [
                                                "tc",
                                                "bc",
                                              ],
                                              "targetOffset": Array [
                                                0,
                                                0,
                                              ],
                                            },
                                            "bottomLeft": Object {
                                              "offset": Array [
                                                0,
                                                4,
                                              ],
                                              "overflow": Object {
                                                "adjustX": 1,
                                                "adjustY": 1,
                                              },
                                              "points": Array [
                                                "tl",
                                                "bl",
                                              ],
                                              "targetOffset": Array [
                                                0,
                                                0,
                                              ],
                                            },
                                            "bottomRight": Object {
                                              "offset": Array [
                                                0,
                                                4,
                                              ],
                                              "overflow": Object {
                                                "adjustX": 1,
                                                "adjustY": 1,
                                              },
                                              "points": Array [
                                                "tr",
                                                "br",
                                              ],
                                              "targetOffset": Array [
                                                0,
                                                0,
                                              ],
                                            },
                                            "left": Object {
                                              "offset": Array [
                                                -4,
                                                0,
                                              ],
                                              "overflow": Object {
                                                "adjustX": 1,
                                                "adjustY": 1,
                                              },
                                              "points": Array [
                                                "cr",
                                                "cl",
                                              ],
                                              "targetOffset": Array [
                                                0,
                                                0,
                                              ],
                                            },
                                            "leftBottom": Object {
                                              "offset": Array [
                                                -4,
                                                0,
                                              ],
                                              "overflow": Object {
                                                "adjustX": 1,
                                                "adjustY": 1,
                                              },
                                              "points": Array [
                                                "br",
                                                "bl",
                                              ],
                                              "targetOffset": Array [
                                                0,
                                                0,
                                              ],
                                            },
                                            "leftTop": Object {
                                              "offset": Array [
                                                -4,
                                                0,
                                              ],
                                              "overflow": Object {
                                                "adjustX": 1,
                                                "adjustY": 1,
                                              },
                                              "points": Array [
                                                "tr",
                                                "tl",
                                              ],
                                              "targetOffset": Array [
                                                0,
                                                0,
                                              ],
                                            },
                                            "right": Object {
                                              "offset": Array [
                                                4,
                                                0,
                                              ],
                                              "overflow": Object {
                                                "adjustX": 1,
                                                "adjustY": 1,
                                              },
                                              "points": Array [
                                                "cl",
                                                "cr",
                                              ],
                                              "targetOffset": Array [
                                                0,
                                                0,
                                              ],
                                            },
                                            "rightBottom": Object {
                                              "offset": Array [
                                                4,
                                                0,
                                              ],
                                              "overflow": Object {
                                                "adjustX": 1,
                                                "adjustY": 1,
                                              },
                                              "points": Array [
                                                "bl",
                                                "br",
                                              ],
                                              "targetOffset": Array [
                                                0,
                                                0,
                                              ],
                                            },
                                            "rightTop": Object {
                                              "offset": Array [
                                                4,
                                                0,
                                              ],
                                              "overflow": Object {
                                                "adjustX": 1,
                                                "adjustY": 1,
                                              },
                                              "points": Array [
                                                "tl",
                                                "tr",
                                              ],
                                              "targetOffset": Array [
                                                0,
                                                0,
                                              ],
                                            },
                                            "top": Object {
                                              "offset": Array [
                                                0,
                                                -4,
                                              ],
                                              "overflow": Object {
                                                "adjustX": 1,
                                                "adjustY": 1,
                                              },
                                              "points": Array [
                                                "bc",
                                                "tc",
                                              ],
                                              "targetOffset": Array [
                                                0,
                                                0,
                                              ],
                                            },
                                            "topLeft": Object {
                                              "offset": Array [
                                                0,
                                                -4,
                                              ],
                                              "overflow": Object {
                                                "adjustX": 1,
                                                "adjustY": 1,
                                              },
                                              "points": Array [
                                                "bl",
                                                "tl",
                                              ],
                                              "targetOffset": Array [
                                                0,
                                                0,
                                              ],
                                            },
                                            "topRight": Object {
                                              "offset": Array [
                                                0,
                                                -4,
                                              ],
                                              "overflow": Object {
                                                "adjustX": 1,
                                                "adjustY": 1,
                                              },
                                              "points": Array [
                                                "br",
                                                "tr",
                                              ],
                                              "targetOffset": Array [
                                                0,
                                                0,
                                              ],
                                            },
                                          }
                                        }
                                        destroyTooltipOnHide={false}
                                        mouseEnterDelay={0.1}
                                        mouseLeaveDelay={0.1}
                                        onConfirm={[Function]}
                                        onPopupAlign={[Function]}
                                        onVisibleChange={[Function]}
                                        overlay={
                                          <div>
                                            <div
                                              className="ant-popover-inner-content"
                                            >
                                              <div
                                                className="ant-popover-message"
                                              >
                                                <Icon
                                                  type="exclamation-circle"
                                                />
                                                <div
                                                  className="ant-popover-message-title"
                                                >
                                                  Are you sure to delete path "/world"?
                                                </div>
                                              </div>
                                              <div
                                                className="ant-popover-buttons"
                                              >
                                                <Button
                                                  clicked={false}
                                                  ghost={false}
                                                  loading={false}
                                                  onClick={[Function]}
                                                  prefixCls="ant-btn"
                                                  size="small"
                                                >
                                                  No
                                                </Button>
                                                <Button
                                                  clicked={false}
                                                  ghost={false}
                                                  loading={false}
                                                  onClick={[Function]}
                                                  prefixCls="ant-btn"
                                                  size="small"
                                                  type="primary"
                                                >
                                                  Yes
                                                </Button>
                                              </div>
                                            </div>
                                          </div>
                                        }
                                        placement="top"
                                        prefixCls="ant-popover"
                                        transitionName="zoom-big"
                                        trigger="click"
                                      >
                                        <Trigger
                                          action="click"
                                          afterPopupVisibleChange={[Function]}
                                          arrowContent={null}
                                          arrowPointAtCenter={false}
                                          autoAdjustOverflow={true}
                                          blurDelay={0.15}
                                          builtinPlacements={
                                            Object {
                                              "bottom": Object {
                                                "offset": Array [
                                                  0,
                                                  4,
                                                ],
                                                "overflow": Object {
                                                  "adjustX": 1,
                                                  "adjustY": 1,
                                                },
                                                "points": Array [
                                                  "tc",
                                                  "bc",
                                                ],
                                                "targetOffset": Array [
                                                  0,
                                                  0,
                                                ],
                                              },
                                              "bottomLeft": Object {
                                                "offset": Array [
                                                  0,
                                                  4,
                                                ],
                                                "overflow": Object {
                                                  "adjustX": 1,
                                                  "adjustY": 1,
                                                },
                                                "points": Array [
                                                  "tl",
                                                  "bl",
                                                ],
                                                "targetOffset": Array [
                                                  0,
                                                  0,
                                                ],
                                              },
                                              "bottomRight": Object {
                                                "offset": Array [
                                                  0,
                                                  4,
                                                ],
                                                "overflow": Object {
                                                  "adjustX": 1,
                                                  "adjustY": 1,
                                                },
                                                "points": Array [
                                                  "tr",
                                                  "br",
                                                ],
                                                "targetOffset": Array [
                                                  0,
                                                  0,
                                                ],
                                              },
                                              "left": Object {
                                                "offset": Array [
                                                  -4,
                                                  0,
                                                ],
                                                "overflow": Object {
                                                  "adjustX": 1,
                                                  "adjustY": 1,
                                                },
                                                "points": Array [
                                                  "cr",
                                                  "cl",
                                                ],
                                                "targetOffset": Array [
                                                  0,
                                                  0,
                                                ],
                                              },
                                              "leftBottom": Object {
                                                "offset": Array [
                                                  -4,
                                                  0,
                                                ],
                                                "overflow": Object {
                                                  "adjustX": 1,
                                                  "adjustY": 1,
                                                },
                                                "points": Array [
                                                  "br",
                                                  "bl",
                                                ],
                                                "targetOffset": Array [
                                                  0,
                                                  0,
                                                ],
                                              },
                                              "leftTop": Object {
                                                "offset": Array [
                                                  -4,
                                                  0,
                                                ],
                                                "overflow": Object {
                                                  "adjustX": 1,
                                                  "adjustY": 1,
                                                },
                                                "points": Array [
                                                  "tr",
                                                  "tl",
                                                ],
                                                "targetOffset": Array [
                                                  0,
                                                  0,
                                                ],
                                              },
                                              "right": Object {
                                                "offset": Array [
                                                  4,
                                                  0,
                                                ],
                                                "overflow": Object {
                                                  "adjustX": 1,
                                                  "adjustY": 1,
                                                },
                                                "points": Array [
                                                  "cl",
                                                  "cr",
                                                ],
                                                "targetOffset": Array [
                                                  0,
                                                  0,
                                                ],
                                              },
                                              "rightBottom": Object {
                                                "offset": Array [
                                                  4,
                                                  0,
                                                ],
                                                "overflow": Object {
                                                  "adjustX": 1,
                                                  "adjustY": 1,
                                                },
                                                "points": Array [
                                                  "bl",
                                                  "br",
                                                ],
                                                "targetOffset": Array [
                                                  0,
                                                  0,
                                                ],
                                              },
                                              "rightTop": Object {
                                                "offset": Array [
                                                  4,
                                                  0,
                                                ],
                                                "overflow": Object {
                                                  "adjustX": 1,
                                                  "adjustY": 1,
                                                },
                                                "points": Array [
                                                  "tl",
                                                  "tr",
                                                ],
                                                "targetOffset": Array [
                                                  0,
                                                  0,
                                                ],
                                              },
                                              "top": Object {
                                                "offset": Array [
                                                  0,
                                                  -4,
                                                ],
                                                "overflow": Object {
                                                  "adjustX": 1,
                                                  "adjustY": 1,
                                                },
                                                "points": Array [
                                                  "bc",
                                                  "tc",
                                                ],
                                                "targetOffset": Array [
                                                  0,
                                                  0,
                                                ],
                                              },
                                              "topLeft": Object {
                                                "offset": Array [
                                                  0,
                                                  -4,
                                                ],
                                                "overflow": Object {
                                                  "adjustX": 1,
                                                  "adjustY": 1,
                                                },
                                                "points": Array [
                                                  "bl",
                                                  "tl",
                                                ],
                                                "targetOffset": Array [
                                                  0,
                                                  0,
                                                ],
                                              },
                                              "topRight": Object {
                                                "offset": Array [
                                                  0,
                                                  -4,
                                                ],
                                                "overflow": Object {
                                                  "adjustX": 1,
                                                  "adjustY": 1,
                                                },
                                                "points": Array [
                                                  "br",
                                                  "tr",
                                                ],
                                                "targetOffset": Array [
                                                  0,
                                                  0,
                                                ],
                                              },
                                            }
                                          }
                                          defaultPopupVisible={false}
                                          destroyPopupOnHide={false}
                                          focusDelay={0}
                                          getDocument={[Function]}
                                          getPopupClassNameFromAlign={[Function]}
                                          hideAction={Array []}
                                          mask={false}
                                          maskClosable={true}
                                          mouseEnterDelay={0.1}
                                          mouseLeaveDelay={0.1}
                                          onConfirm={[Function]}
                                          onPopupAlign={[Function]}
                                          onPopupVisibleChange={[Function]}
                                          overlay={
                                            <div>
                                              <div
                                                className="ant-popover-inner-content"
                                              >
                                                <div
                                                  className="ant-popover-message"
                                                >
                                                  <Icon
                                                    type="exclamation-circle"
                                                  />
                                                  <div
                                                    className="ant-popover-message-title"
                                                  >
                                                    Are you sure to delete path "/world"?
                                                  </div>
                                                </div>
                                                <div
                                                  className="ant-popover-buttons"
                                                >
                                                  <Button
                                                    clicked={false}
                                                    ghost={false}
                                                    loading={false}
                                                    onClick={[Function]}
                                                    prefixCls="ant-btn"
                                                    size="small"
                                                  >
                                                    No
                                                  </Button>
                                                  <Button
                                                    clicked={false}
                                                    ghost={false}
                                                    loading={false}
                                                    onClick={[Function]}
                                                    prefixCls="ant-btn"
                                                    size="small"
                                                    type="primary"
                                                  >
                                                    Yes
                                                  </Button>
                                                </div>
                                              </div>
                                            </div>
                                          }
                                          popup={[Function]}
                                          popupAlign={Object {}}
                                          popupClassName=""
                                          popupPlacement="top"
                                          popupStyle={Object {}}
                                          popupTransitionName="zoom-big"
                                          prefixCls="ant-popover"
                                          showAction={Array []}
                                        >
                                          <Button
                                            clicked={false}
                                            ghost={false}
                                            loading={false}
                                            onClick={[Function]}
                                            onMouseDown={[Function]}
                                            onTouchStart={[Function]}
                                            prefixCls="ant-btn"
                                            type="danger"
                                          >
                                            <button
                                              className="ant-btn ant-btn-danger"
                                              onClick={[Function]}
                                              onMouseDown={[Function]}
                                              onMouseUp={[Function]}
                                              onTouchStart={[Function]}
                                              type="button"
                                            >
                                              <Icon
                                                type="arrow-up"
                                              >
                                                <i
                                                  className="anticon anticon-arrow-up"
                                                />
                                              </Icon>
                                              <span>
                                                Delete
                                              </span>
                                            </button>
                                          </Button>
                                        </Trigger>
                                      </Tooltip>
                                    </Tooltip>
                                  </_a>
                                  <FormItem
                                    colon={true}
                                    hasFeedback={false}
                                    label="Name"
                                    labelCol={
                                      Object {
                                        "sm": Object {
                                          "span": 6,
                                        },
                                        "xs": Object {
                                          "span": 24,
                                        },
                                      }
                                    }
                                    prefixCls="ant-form"
                                    wrapperCol={
                                      Object {
                                        "sm": Object {
                                          "span": 12,
                                        },
                                        "xs": Object {
                                          "span": 24,
                                        },
                                      }
                                    }
                                  >
                                    <Row
                                      className="ant-form-item"
                                      gutter={0}
                                    >
                                      <div
                                        className="ant-row ant-form-item"
                                      >
                                        <Col
                                          className="ant-form-item-label"
                                          sm={
                                            Object {
                                              "span": 6,
                                            }
                                          }
                                          xs={
                                            Object {
                                              "span": 24,
                                            }
                                          }
                                        >
                                          <div
                                            className="ant-form-item-label ant-col-xs-24 ant-col-sm-6"
                                          >
                                            <label
                                              className=""
                                              htmlFor={null}
                                              title="Name"
                                            >
                                              Name
                                            </label>
                                          </div>
                                        </Col>
                                        <Col
                                          className="ant-form-item-control-wrapper"
                                          sm={
                                            Object {
                                              "span": 12,
                                            }
                                          }
                                          xs={
                                            Object {
                                              "span": 24,
                                            }
                                          }
                                        >
                                          <div
                                            className="ant-form-item-control-wrapper ant-col-xs-24 ant-col-sm-12"
                                          >
                                            <div
                                              className="ant-form-item-control "
                                            >
                                              <Input
                                                disabled={false}
                                                onChange={[Function]}
                                                placeholder="Path"
                                                prefixCls="ant-input"
                                                size="large"
                                                type="text"
                                                value="/world"
                                              >
                                                <input
                                                  className="ant-input ant-input-lg"
                                                  disabled={false}
                                                  onChange={[Function]}
                                                  onKeyDown={[Function]}
                                                  placeholder="Path"
                                                  size="large"
                                                  type="text"
                                                  value="/world"
                                                />
                                              </Input>
                                            </div>
                                          </div>
                                        </Col>
                                      </div>
                                    </Row>
                                  </FormItem>
                                </div>
                              </FormItem>
                            </Connect(FormItem)>
                          </div>
                        </div>
                      </PanelContent>
                    </AnimateChild>
                  </Animate>
                </div>
              </CollapsePanel>
            </div>
          </Collapse>
        </Collapse>
        <Button
          clicked={false}
          ghost={false}
          loading={false}
          onClick={[Function]}
          prefixCls="ant-btn"
          size="large"
          type="primary"
        >
          <button
            className="ant-btn ant-btn-primary ant-btn-lg"
            onClick={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <Icon
              type="plus"
            >
              <i
                className="anticon anticon-plus"
              />
            </Icon>
            <span>
              Add path
            </span>
          </button>
        </Button>
      </div>
    </Paths>
  </Connect(Paths)>
</Provider>
`;

exports[`test paths view paths 1`] = `
<Provider
  store={
    Object {
      "actions": Array [],
      "dispatch": [Function],
      "getState": [Function],
      "logicMiddleware": [Function],
      "replaceReducer": [Function],
      "resetActions": [Function],
      "subscribe": [Function],
      "whenComplete": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Connect(Paths)>
    <Paths
      addPath={[Function]}
      paths={
        Array [
          Object {
            "createdAt": 1498875254374,
            "methods": Array [
              Object {
                "apiGroup": "Light",
                "batch": false,
                "description": "Get Server Info",
                "examples": Array [],
                "method": "get",
                "parameters": Object {},
                "permissions": Array [],
                "request": Object {},
                "response": Object {},
                "since": "1.0.2",
                "status": "normal",
                "tags": Array [
                  "API Versions",
                ],
                "visibility": "public",
              },
            ],
            "path": "/restapi",
          },
        ]
      }
    >
      <div>
        <h2>
          Paths
        </h2>
        <Collapse
          accordion={true}
          bordered={true}
          openAnimation={
            Object {
              "appear": [Function],
              "enter": [Function],
              "leave": [Function],
            }
          }
          prefixCls="ant-collapse"
        >
          <Collapse
            accordion={true}
            bordered={true}
            className=""
            destroyInactivePanel={false}
            onChange={[Function]}
            openAnimation={
              Object {
                "appear": [Function],
                "enter": [Function],
                "leave": [Function],
              }
            }
            prefixCls="ant-collapse"
          >
            <div
              className="ant-collapse"
            >
              <CollapsePanel
                destroyInactivePanel={false}
                header="/restapi"
                headerClass=""
                isActive={false}
                onItemClick={[Function]}
                openAnimation={
                  Object {
                    "appear": [Function],
                    "enter": [Function],
                    "leave": [Function],
                  }
                }
                prefixCls="ant-collapse"
                showArrow={true}
              >
                <div
                  className="ant-collapse-item"
                >
                  <div
                    aria-expanded={false}
                    className="ant-collapse-header"
                    onClick={[Function]}
                    role="tab"
                  >
                    <i
                      className="arrow"
                    />
                    /restapi
                  </div>
                  <Animate
                    animation={
                      Object {
                        "appear": [Function],
                        "enter": [Function],
                        "leave": [Function],
                      }
                    }
                    component=""
                    componentProps={Object {}}
                    exclusive={true}
                    onAppear={[Function]}
                    onEnd={[Function]}
                    onEnter={[Function]}
                    onLeave={[Function]}
                    showProp="isActive"
                    transitionAppear={false}
                    transitionEnter={true}
                    transitionLeave={true}
                  >
                    <AnimateChild
                      animation={
                        Object {
                          "appear": [Function],
                          "enter": [Function],
                          "leave": [Function],
                        }
                      }
                      transitionAppear={false}
                      transitionEnter={true}
                      transitionLeave={true}
                    >
                      <PanelContent
                        destroyInactivePanel={false}
                        isActive={false}
                        prefixCls="ant-collapse"
                      />
                    </AnimateChild>
                  </Animate>
                </div>
              </CollapsePanel>
            </div>
          </Collapse>
        </Collapse>
        <Button
          clicked={false}
          ghost={false}
          loading={false}
          onClick={[Function]}
          prefixCls="ant-btn"
          size="large"
          type="primary"
        >
          <button
            className="ant-btn ant-btn-primary ant-btn-lg"
            onClick={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <Icon
              type="plus"
            >
              <i
                className="anticon anticon-plus"
              />
            </Icon>
            <span>
              Add path
            </span>
          </button>
        </Button>
      </div>
    </Paths>
  </Connect(Paths)>
</Provider>
`;
